# ot-harjoitustyo

./: .gitignore  README.md  README.md.save  gitlog.txt  pyproject.toml  tasks.py
data/: database.sqlite  test-database.sqlite
documentation/: architecture.md  changelog.md  instructions.md  requirement_specification.md  testing.md  working_time_records.md
dokumentaatio/: tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py  maksukortti_test.py.save
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: T1_monopoly.md  T2_monopoly.md  T3_SequenceDiagram.md
src/: build.py  config.py  index.py  initialize_database.py
src/entities/: category.py  expense.py  user.py
src/repositories/: category_repository.py  expense_repository.py  user_repository.py
src/services/: category_service.py  expense_service.py  user_service.py
src/tests/repositories/: category_repository_test.py  expense_repository_test.py  user_repository_test.py
src/tests/services/: category_service_test.py  expense_service_test.py  user_service_test.py
src/ui/: category_view.py  create_user_view.py  expense_view.py  login_view.py  main_view.py  ui.py
