[tool.poetry]
name = "Budgeting application"
version = "0.1.0"
description = ""
authors = ["Oskari Heinonen <oskari.l.heinonen@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.20.0"
invoke = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest-dotenv = "^0.5.2"
pytest = "^7.1.1"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
